<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_product_name"
                android:layout_weight="2"
                android:paddingLeft="4dp"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/edit_product_price"
                    android:inputType="numberDecimal"
                    style="@style/EditorFieldStyle" />

                <TextView
                    android:id="@+id/unit"
                    style="@style/EditorUnitsStyle"
                    android:layout_width="23dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/dollar_currency_sign" />


            </RelativeLayout>
        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp">

    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product_photo" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">

            <!-- Photo -->
            <ImageView
                android:id="@+id/edit_product_photo"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                 android:paddingLeft="4dp"
                android:scaleType="centerInside"
                tools:background="@drawable/ic_empty_storehouse"
                tools:minHeight="120dp" />

            <TextView
                android:id="@+id/add_or_edit_photo_hint"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="12dp"
                android:layout_below="@id/edit_product_photo"
                android:layout_gravity="center_horizontal"
                android:textStyle="italic"
                tools:text="Tap to add a photo" />

        </LinearLayout>



    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp">

    </View>
    <!--Quantity category-->

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <!--Supplier-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/hint_product_quantity" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_product_qty"
                style="@style/EditorFieldStyle"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/unit_pcs"
                style="@style/EditorUnitsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="13dp"
                android:text="pcs" />


        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords" />

            <!-- Breed field -->
            <EditText
                android:id="@+id/edit_supplier_phone"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_phone"
                android:inputType="textCapWords" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>

</ScrollView>